# pytorch_trainer

./: .gitignore  README.md  get_from_llnl.sh  lines_of_code.py  linux_cuda_12_1_req.txt  put_to_llnl.sh  pyproject.toml
examples/flir_yolov5/run_experiment/: __main__.py  config.py  post_train_eda.py  pre_run_eda.py  run.sh
examples/flir_yolov5/run_experiment/loss_logs/: train_log.csv  validation_log.csv
examples/flir_yolov5/src/train_module/: __init__.py  train_module.py
examples/flir_yolov5/src/yolo_utils/: __init__.py  box_statistics.py  box_viewers.py  coco_transformer.py  dataset.py  loss.py  map_evalutaion.py  targets.py  utils.py
examples/flir_yolov5/src/yolov5/: yolov5.py
examples/mnist/: evaluate.py  main.py  module.py  temp.py  train.py  train_ddp.py
examples/mnist/loss_logs/: train_log.csv  validation_log.csv
examples/mnist_ddp/: main.py  train_ddp.py
examples/mnist_ddp/multi_node/: main.py
examples/mnist_ddp/single_node/: main.py
examples/mnist_ddp/single_node/loss_logs/: train_log.csv  validation_log.csv
examples/mnist_ddp/single_node/torchrun_script/: run.sh  (+1 more)
src/callbacks/: save_checkpoint.py
src/trainer/: trainer.py
src/trfc/callbacks/: base.py  conf_mat.py  csv_logger.py  load_checkpoint.py  progress_bar.py  progress_bar_updater.py  save_checkpoint.py  utils.py
src/trfc/trainer/: trainer.py  utils.py
src/trnr/: metrics.py
src/trnr/callbacks/: _conf_mat.py  base.py  basic_lr_scheduler.py  confusion_matrix.py  csv_logger.py  file_copier.py  metrics.py  save_best_checkpoint.py
src/trnr/trainer/: trainer.py  utils.py
(+22 files in other folders)
